# school-21

./: .gitignore  AstarSolver.py  CMakeLists.txt  Dockerfile  LICENSE  Makefile  NORM_ERRORS  README.md  Solver.py  _gen.py  camera.c  checker.py  circle.c  clean_scene_2.c  client.c  color_1.c  color_2.c  computor.cpp  cylinder.c  dirs.py  disasm.txt  filter.sh  flags.txt  ft_atoi.c  ft_calloc.c  ft_float_utils1.c  ft_float_utils2.c  ft_format_parcers.c  ft_get_format.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_issmth1.c  ft_issmth2.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  (+98 more)
BSQ/: BSQ  Makefile  alg.c  bsq.h  checkers.c  find_max.c  main.c  main.cp  map  map_gen.pl  parcer.c  print_out.c
C00/: main.c
C00/ex01/: ft_print_alphabet.c
C00/ex02/: ft_print_reverse_alphabet.c
C00/ex03/: ft_print_numbers.c
C00/ex04/: ft_is_negative.c
C00/ex05/: ft_print_comb.c
C00/ex06/: ft_print_comb2.c
C00/ex07/: ft_putnbr.c
C00/ex08/: ft_print_combn.c
C01/: main.c
C01/ex00/: ft_ft.c
C01/ex01/: ft_ultimate_ft.c
C01/ex02/: ft_swap.c
C01/ex03/: ft_div_mod.c
C01/ex04/: ft_ultimate_div_mod.c
C01/ex05/: ft_putstr.c
C01/ex06/: ft_strlen.c
C01/ex07/: ft_rev_int_tab.c
C01/ex08/: ft_sort_int_tab.c
C02/: main.c
C02/ex00/: ft_strcpy.c
C02/ex01/: ft_strncpy.c
C02/ex02/: ft_str_is_alpha.c
C02/ex03/: ft_str_is_numeric.c
C02/ex04/: ft_str_is_lowercase.c
C02/ex05/: ft_str_is_uppercase.c
C02/ex06/: ft_str_is_printable.c
C02/ex07/: ft_strupcase.c
C02/ex08/: ft_strlowcase.c
C02/ex09/: ft_strcapitalize.c
C02/ex10/: ft_strlcpy.c
C02/ex11/: ft_putstr_non_printable.c
C02/ex12/: ft_print_memory.c
C03/: main.c
C03/ex00/: ft_strcmp.c
C03/ex01/: ft_strncmp.c
C03/ex02/: ft_strcat.c
C03/ex03/: ft_strncat.c
C03/ex04/: ft_strstr.c
C03/ex05/: ft_strlcat.c
C04/: main.c  main2.c
C04/ex00/: ft_strlen.c
C04/ex01/: ft_putstr.c
C04/ex02/: ft_putnbr.c
C04/ex03/: ft_atoi.c
C04/ex04/: ft_putnbr_base.c
C04/ex05/: ft_atoi_base.c
C05/: main.c
C05/ex00/: ft_iterative_factorial.c
C05/ex01/: ft_recursive_factorial.c
C05/ex02/: ft_iterative_power.c
C05/ex03/: ft_recursive_power.c
C05/ex04/: ft_fibonacci.c
C05/ex05/: ft_sqrt.c
C05/ex06/: ft_is_prime.c
C05/ex07/: ft_find_next_prime.c
C05/ex08/: ft_ten_queens_puzzle.c
C06/: test.sh
C06/ex00/: ft_print_program_name.c
C06/ex01/: ft_print_params.c
C06/ex02/: ft_rev_params.c
C06/ex03/: ft_sort_params.c
C07/: main.c
C07/ex00/: ft_strdup.c
C07/ex01/: ft_range.c
C07/ex02/: ft_ultimate_range.c
C07/ex03/: ft_strjoin.c
C07/ex04/: ft_convert_base.c  ft_convert_base2.c
C08/: main.c
C08/ex00/: ft.h
C08/ex01/: ft_boolean.h
C08/ex02/: ft_abs.h
C08/ex03/: ft_point.h
C08/ex04/: ft_strs_to_tab.c
C08/ex05/: ft_show_tab.c
C09/ex00/: libft_creator.sh
C09/ex01/: makefile
C09/ex02/: ft_split.c
C10/: .gitignore  test.sh
C10/ex00/: Makefile  ft_display_file.c
C10/ex01/: Makefile  ft_cat.c  print_file.c
C10/ex02/: Makefile  funcs.c  main.c  read_file.c  tail.h
C10/ex03/: Makefile  dec2hex.c  err.c  file_cat.c  hexdump.h  main.c  put_np_char.c
C11/: main.c
C11/ex00/: ft_foreach.c
C11/ex01/: ft_map.c
C11/ex02/: ft_any.c
C11/ex03/: ft_count_if.c
C11/ex04/: ft_is_sort.c  main.c
C11/ex05/: Makefile  atoi.c  do-op  do_op.h  main.c  operators.c  print_int.c
C11/ex06/: ft_sort_string_tab.c
C11/ex07/: ft_advanced_sort_string_tab.c
C12/: main.c  test.c
C12/ex00/: ft_create_elem.c
C12/ex01/: ft_list_push_front.c
C12/ex02/: ft_list_size.c
C12/ex03/: ft_list_last.c
C12/ex04/: ft_list_push_back.c
C12/ex05/: ft_list_push_strs.c
C12/ex06/: ft_list_clear.c
C12/ex07/: ft_list_at.c
C12/ex08/: ft_list_reverse.c
C12/ex09/: ft_list_foreach.c
C12/ex10/: ft_list.h  ft_list_foreach_if.c
C12/ex11/: ft_list_find.c
C12/ex12/: ft_list_remove_if.c
C12/ex13/: ft_list_merge.c
C12/ex14/: ft_list_sort.c
C12/ex15/: ft_list_reverse_fun.c
C12/ex16/: ft_sorted_list_insert.c
C12/ex17/: ft_list.h  ft_sorted_list_merge.c
C13/: ft_btree.h  main.c  main_c13.c
C13/ex00/: btree_create_node.c  ft_btree.h
C13/ex01/: btree_apply_prefix.c  ft_btree.h
C13/ex02/: btree_apply_infix.c  ft_btree.h
C13/ex03/: btree_apply_suffix.c  ft_btree.h
C13/ex04/: btree_insert_data.c  ft_btree.h
C13/ex05/: btree_search_item.c  ft_btree.h
C13/ex06/: btree_level_count.c  ft_btree.h
C13/ex07/: btree_apply_by_level.c  ft_btree.h
CPP-00/ex00/: Makefile  megaphone.cpp
CPP-00/ex01/: Makefile  color.hpp  phbook.hpp
CPP-00/ex02/: Account.cpp  Account.hpp  Makefile  accounts  tests.cpp
CPP-01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
CPP-01/ex01/: .gitignore  Makefile  Zombie.cpp  Zombie.hpp  main.cpp  names.py  names.txt  random.cpp  zombieHorde.cpp
CPP-01/ex04/: inp  (+3 more)
CPP-02/: .gitignore
CPP-08/: .gitignore
Rush00/: ft_putchar.c  main.c  rush00.c  rush01.c  rush02.c  rush03.c  rush04.c
Rush01/: checkmap.c  extra_check.c  main.c  printers.c
bonus/: camera_bonus.c  clean_scene_1_bonus.c  clean_scene_2_bonus.c  color_1_bonus.c  color_2_bonus.c  compute_lightning_bonus.c  cylinder_bonus.c  key_switcher_bonus.c  keyboard_manager_bonus.c  light_bonus.c  main_bonus.c  math_utils_bonus.c  objects.h  plane_bonus.c  point_1_bonus.c  point_2_bonus.c  point_3_bonus.c  ray_traycer.h  scene_parcer_1_bonus.c  scene_parcer_2_bonus.c  scene_parcer_4_bonus.c  screenshot_bonus.c  sphere_bonus.c  trace_ray_bonus.c  triangle_bonus.c  utils_1_bonus.c  utils_2_bonus.c  utils_3_bonus.c
ex00/: megaphone.cpp
ex01/: pb.cpp  phbook.cpp
get_next_line/: get_next_line.c  get_next_line_utils.c
inc/: minitalk.h
include/: color.h  minitalk.h  philo.h
libft/: Makefile  libft.h
mlx/: Makefile.gen
scenes/: all.rt  cameras.rt  cylinders.rt  lights.rt  planes.rt  spheres.rt  squares.rt  test.rt  triangles.rt  wolf.rt
shell00/: .gitignore
src/: client.c  server.c  utils.c
srcs/: .env  docker-compose.yaml  init.sh  nginx.conf  phpmyadmin.inc.php  wp-config.php
test/: inp2
(+205 files in other folders)
